chamber home page v4.6 - Fixed directory alignment

--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -136,7 +136,7 @@
         margin: 20px;
         padding: 0;
         /* margin: 0 auto; */
-        /* max-width: 100vw; */
+        max-width: 80vw;
         /* width: 100%; */
     }
 
